--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "node": ">=10"
   },
   "scripts": {
-    "start": "tsdx watch",
+    "dev": "node-dev .",
+    "start:discord": "ts-node src/discord",
     "build": "tsdx build",
     "test": "tsdx test",
     "lint": "tsdx lint",
