--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "dev": "node-dev .",
-    "start:discord": "ts-node src/discord",
+    "start:discord": "ts-node src/discord.ts",
     "build": "tsdx build",
     "test": "tsdx test",
     "lint": "tsdx lint",
@@ -54,6 +54,8 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "@discordjs/rest": "^0.3.0",
+    "discord-api-types": "^0.31.0",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0"
   }
