--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/ronnapatp/diswitch/issues"
   },
-  "homepage": "https://github.com/ronnapatp/diswitch#readme"
+  "homepage": "https://github.com/ronnapatp/diswitch#readme",
+  "dependencies": {
+    "discord.js": "^13.6.0"
+  }
 }
