--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "dependencies": {
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0"
+  },
+  "devDependencies": {
+    "prettier": "2.6.2"
   }
 }
