--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@discordjs/rest": "^0.3.0",
     "discord-api-types": "^0.31.0",
     "discord.js": "^13.6.0",
-    "dotenv": "^16.0.0"
+    "dotenv": "^16.0.0",
+    "tmi.js": "^1.8.5"
   },
   "devDependencies": {
     "prettier": "2.6.2"
