--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "url": "https://github.com/ronnapatp/Disswitch/issues"
   },
   "homepage": "https://github.com/ronnapatp/Disswitch#readme",
+  "type": "module",
   "dependencies": {
     "@discordjs/rest": "^0.3.0",
     "discord-api-types": "^0.31.0",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
+    "dotenv-flow": "^3.2.0",
     "tmi.js": "^1.8.5"
   },
   "devDependencies": {
