--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "disswitch",
   "version": "1.0.0",
   "description": "",
+  "main": "index.js",
   "scripts": {
     "lint": "prettier --write .",
-    "start:discord": "node discord/index.js",
+    "start": "node .",
+    "dev": "node .",
+    "start:discord": "node discord.js",
     "start:twitch": "node twitch/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
