--- a/package.json
+++ b/package.json
@@ -1,38 +1,55 @@
 {
-  "name": "disswitch",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.1.0",
+  "license": "MIT",
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "src"
+  ],
+  "engines": {
+    "node": ">=10"
+  },
   "scripts": {
-    "lint": "prettier --write .",
-    "start": "node .",
-    "dev": "node .",
-    "start:discord": "node discord.js",
-    "start:twitch": "node twitch/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "tsdx watch",
+    "build": "tsdx build",
+    "test": "tsdx test",
+    "lint": "tsdx lint",
+    "prepare": "tsdx build",
+    "size": "size-limit",
+    "analyze": "size-limit --why"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/ronnapatp/Disswitch.git"
+  "peerDependencies": {},
+  "husky": {
+    "hooks": {
+      "pre-commit": "tsdx lint"
+    }
   },
-  "keywords": [],
+  "prettier": {
+    "printWidth": 80,
+    "semi": true,
+    "singleQuote": true,
+    "trailingComma": "es5"
+  },
+  "name": "mylib",
   "author": "Ronnapat Srivoravilai",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ronnapatp/Disswitch/issues"
-  },
-  "homepage": "https://github.com/ronnapatp/Disswitch#readme",
-  "type": "module",
-  "dependencies": {
-    "@discordjs/rest": "^0.3.0",
-    "discord-api-types": "^0.31.0",
-    "discord.js": "^13.6.0",
-    "dotenv": "^16.0.0",
-    "dotenv-flow": "^3.2.0",
-    "eslint": "^8.13.0",
-    "tmi.js": "^1.8.5"
-  },
+  "module": "dist/mylib.esm.js",
+  "size-limit": [
+    {
+      "path": "dist/mylib.cjs.production.min.js",
+      "limit": "10 KB"
+    },
+    {
+      "path": "dist/mylib.esm.js",
+      "limit": "10 KB"
+    }
+  ],
   "devDependencies": {
-    "prettier": "2.6.2"
+    "@size-limit/preset-small-lib": "^7.0.8",
+    "husky": "^7.0.4",
+    "size-limit": "^7.0.8",
+    "tsdx": "^0.14.1",
+    "tslib": "^2.3.1",
+    "typescript": "^4.6.3"
   }
 }
