--- a/package.json
+++ b/package.json
@@ -1,59 +1,20 @@
 {
-  "version": "0.1.0",
-  "license": "MIT",
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
-  "files": [
-    "dist",
-    "src"
-  ],
-  "engines": {
-    "node": ">=10"
-  },
+  "name": "diswitch",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "tsdx watch",
-    "build": "tsdx build",
-    "test": "tsdx test",
-    "lint": "tsdx lint",
-    "prepare": "tsdx build",
-    "size": "size-limit",
-    "analyze": "size-limit --why"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "peerDependencies": {},
-  "husky": {
-    "hooks": {
-      "pre-commit": "tsdx lint"
-    }
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/ronnapatp/diswitch.git"
   },
-  "prettier": {
-    "printWidth": 80,
-    "semi": true,
-    "singleQuote": true,
-    "trailingComma": "es5"
-  },
-  "name": "mylib",
+  "keywords": [],
   "author": "Ronnapat Srivoravilai",
-  "module": "dist/mylib.esm.js",
-  "size-limit": [
-    {
-      "path": "dist/mylib.cjs.production.min.js",
-      "limit": "10 KB"
-    },
-    {
-      "path": "dist/mylib.esm.js",
-      "limit": "10 KB"
-    }
-  ],
-  "devDependencies": {
-    "@size-limit/preset-small-lib": "^7.0.8",
-    "husky": "^7.0.4",
-    "size-limit": "^7.0.8",
-    "tsdx": "^0.14.1",
-    "tslib": "^2.3.1",
-    "typescript": "^4.6.3"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ronnapatp/diswitch/issues"
   },
-  "dependencies": {
-    "discord.js": "^13.6.0",
-    "dotenv-flow": "^3.2.0"
-  }
+  "homepage": "https://github.com/ronnapatp/diswitch#readme"
 }
