--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/ronnapatp/diswitch#readme",
   "dependencies": {
+    "@discordjs/builders": "^0.12.0",
     "discord.js": "^13.6.0",
     "dotenv-flow": "^3.2.0"
   }
