--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "diswitch",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
+    "dev": "ts-node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +20,7 @@
   "homepage": "https://github.com/ronnapatp/diswitch#readme",
   "dependencies": {
     "@discordjs/builders": "^0.12.0",
+    "@types/dotenv-flow": "^3.2.0",
     "discord.js": "^13.6.0",
     "dotenv-flow": "^3.2.0"
   }
