--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "dependencies": {
     "@discordjs/builders": "^0.12.0",
     "@types/dotenv-flow": "^3.2.0",
+    "@types/tmi.js": "^1.8.1",
     "discord.js": "^13.6.0",
-    "dotenv-flow": "^3.2.0"
+    "dotenv-flow": "^3.2.0",
+    "tmi.js": "^1.8.5"
   }
 }
