--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "discord.js": "^13.6.0",
     "dotenv-flow": "^3.2.0",
     "tmi.js": "^1.8.5"
+  },
+  "devDependencies": {
+    "prettier": "2.6.2"
   }
 }
