--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "dev": "ts-node .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "yarn prettier --write ."
   },
   "repository": {
     "type": "git",
