--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/ronnapatp/diswitch#readme",
   "dependencies": {
     "@discordjs/builders": "^0.12.0",
+    "@discordjs/rest": "^0.4.0",
     "@types/dotenv-flow": "^3.2.0",
     "@types/tmi.js": "^1.8.1",
     "discord.js": "^13.6.0",
