--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "tmi.js": "^1.8.5"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.19.0",
+    "@typescript-eslint/parser": "^5.19.0",
+    "eslint": "^8.13.0",
     "prettier": "2.6.2"
   }
 }
