--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "update": "ts-node deploy-commands.ts",
     "start:discord": "ts-node discord.ts",
     "start:twitch": "ts-node twitch.ts",
-    "lint": "yarn prettier --write .",
-    "prepare": "husky install"
+    "lint": "yarn prettier --write ."
   },
   "repository": {
     "type": "git",
@@ -35,7 +34,6 @@
     "@typescript-eslint/eslint-plugin": "^5.19.0",
     "@typescript-eslint/parser": "^5.19.0",
     "eslint": "^8.13.0",
-    "prettier": "2.6.2",
-    "husky": "^7.0.0"
+    "prettier": "2.6.2"
   }
 }
