update: .env.example

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,9 @@ DISCORD_TOKEN=
 DISCORD_GUILD_ID=
 DISCORD_CLIENT_ID=
 
+# If you want command to be in english set ENGLISH to true but if you want command in Thai set ENGLISH to false
+ENGLISH=true
+
 TWITCH_USERNAME=
 TWITCH_PASSWORD=
 TWITCH_CHANNEL=
