--- a/website/package.json
+++ b/website/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public --no-clear"
+    "start": "sirv public --no-clear",
+    "link": "prettier --write ."
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
