--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
   "dependencies": {
     "@discordjs/builders": "^0.12.0",
     "@discordjs/rest": "^0.4.0",
+    "@prisma/client": "3.12.0",
     "@types/dotenv-flow": "^3.2.0",
     "@types/tmi.js": "^1.8.1",
     "discord.js": "^13.6.0",
     "dotenv-flow": "^3.2.0",
+    "prisma": "^3.12.0",
     "tmi.js": "^1.8.5"
   },
   "devDependencies": {
