--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@discordjs/rest": "^0.4.0",
     "@prisma/client": "3.12.0",
     "@types/dotenv-flow": "^3.2.0",
+    "@types/prettyjson": "^0.0.30",
     "@types/tmi.js": "^1.8.1",
     "discord.js": "^13.6.0",
     "dotenv-flow": "^3.2.0",
+    "prettyjson": "^1.2.5",
     "prisma": "^3.12.0",
     "tmi.js": "^1.8.5"
   },
